# TermClock

./: Cargo.toml  LICENSE  README.md  conf.yaml  termclock.yml
src/: api.rs  config.rs  main.rs  model.rs  ui.rs
