[package]
name = "termclock"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.27"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
chrono = { version = "0.4", features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
mysql = "24"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"